# admin-service/core/endpoint.go
@@ -1,0 +1,18 @@
+package core
+
+import (
+	"context"
+
+	"github.com/go-kit/kit/endpoint"
+)
+
+func LoginEndpoint(s AdminService) endpoint.Endpoint {
+	return func(ctx context.Context, request interface{}) (interface{}, error) {
+		info := request.(LoginRequest)
+		token, err := s.login(info)
+		if err != nil {
+			return LoginResponse{Err: err.Error()}, err
+		}
+		return LoginResponse{Jwt: token}, nil
+	}
+}
