# user-service/main.go
@@ -47,7 +47,8 @@ func main() {
 	svc := core.NewUserService(database, s3svc, bucket, bucketUrl)
 	loginEndpoint := core.SnsLoginEndpoint(svc)
 	phoneLoginEndpoint := core.PhoneLoginEndpoint(svc)
-	sendCodeEndpoint := core.SendCodeEndpoint(svc)
+	sendCodeSignInEndpoint := core.SendCodeForSignInEndpoint(svc)
+	sendCodeLoginEndpoint := core.SendCodeForLoginEndpoint(svc)
 	autoLoginEndpoint := core.AutoLoginEndpoint(svc)
 	verifyEndpoint := core.VerifyEndpoint(svc)
 	updateEndpoint := core.UpdateUserEndpoint(svc)
@@ -73,7 +74,8 @@ func main() {
 	app.Post("/sns-login", core.SnsLoginHandler(loginEndpoint))
 	app.Post("/phone-login", core.PhoneLoginHandler(phoneLoginEndpoint))
 	app.Post("/auto-login", core.AutoLoginHandler(autoLoginEndpoint))
-	app.Post("/send-code/:number", core.SendCodeHandler(sendCodeEndpoint))
+	app.Post("/send-code-join/:number", core.SendCodeForSignInHandler(sendCodeSignInEndpoint))
+	app.Post("/send-code-login/:number", core.SendCodeForLoginHandler(sendCodeLoginEndpoint))
 	app.Post("/verify-code", core.VerifyHandler(verifyEndpoint))
 	app.Post("/update-user", core.UpdateUserHandler(updateEndpoint))
 	app.Post("/link-email", core.LinkHandler(linkEndpoint))
